# serializer version: 1
# name: TestComputeMatrix.test_matrix_values_snapshot[datetime-event-hamming]
  shape: (10, 11)
  ┌─────┬─────────┬─────────┬─────────┬───┬─────────┬─────────┬─────────┬─────────┐
  │ id  ┆ 1       ┆ 2       ┆ 3       ┆ … ┆ 7       ┆ 8       ┆ 9       ┆ 10      │
  │ --- ┆ ---     ┆ ---     ┆ ---     ┆   ┆ ---     ┆ ---     ┆ ---     ┆ ---     │
  │ i64 ┆ f32     ┆ f32     ┆ f32     ┆   ┆ f32     ┆ f32     ┆ f32     ┆ f32     │
  ╞═════╪═════════╪═════════╪═════════╪═══╪═════════╪═════════╪═════════╪═════════╡
  │ 1   ┆ -5.498  ┆ -0.7217 ┆ -0.9274 ┆ … ┆ 2.3551  ┆ 1.4773  ┆ 0.2947  ┆ -0.9351 │
  │ 2   ┆ -0.7217 ┆ -4.6066 ┆ -0.0266 ┆ … ┆ 1.3082  ┆ 1.7155  ┆ -1.2971 ┆ -3.3243 │
  │ 3   ┆ -0.9274 ┆ -0.0266 ┆ -4.032  ┆ … ┆ -0.6656 ┆ -0.8559 ┆ 1.1549  ┆ 0.2747  │
  │ 4   ┆ -0.7334 ┆ -0.2498 ┆ -0.2482 ┆ … ┆ 1.1083  ┆ -0.6417 ┆ -0.5288 ┆ 2.5509  │
  │ 5   ┆ 1.2617  ┆ -1.6015 ┆ -0.0619 ┆ … ┆ 0.0732  ┆ 1.0161  ┆ -0.1502 ┆ -0.4863 │
  │ 6   ┆ 1.8974  ┆ 1.6308  ┆ 0.1232  ┆ … ┆ 0.5526  ┆ -0.7886 ┆ 0.8659  ┆ 1.5175  │
  │ 7   ┆ 2.3551  ┆ 1.3082  ┆ -0.6656 ┆ … ┆ -1.2681 ┆ 0.5526  ┆ 1.1083  ┆ 1.154   │
  │ 8   ┆ 1.4773  ┆ 1.7155  ┆ -0.8559 ┆ … ┆ 0.5526  ┆ -1.8268 ┆ 1.4964  ┆ 2.5863  │
  │ 9   ┆ 0.2947  ┆ -1.2971 ┆ 1.1549  ┆ … ┆ 1.1083  ┆ 1.4964  ┆ -1.9769 ┆ -0.1057 │
  │ 10  ┆ -0.9351 ┆ -3.3243 ┆ 0.2747  ┆ … ┆ 1.154   ┆ 2.5863  ┆ -0.1057 ┆ -6.9676 │
  └─────┴─────────┴─────────┴─────────┴───┴─────────┴─────────┴─────────┴─────────┘
# ---
# name: TestComputeMatrix.test_matrix_values_snapshot[datetime-event-l2entity]
  shape: (10, 11)
  ┌─────┬─────────┬─────────┬─────────┬───┬─────────┬─────────┬─────────┬─────────┐
  │ id  ┆ 1       ┆ 2       ┆ 3       ┆ … ┆ 7       ┆ 8       ┆ 9       ┆ 10      │
  │ --- ┆ ---     ┆ ---     ┆ ---     ┆   ┆ ---     ┆ ---     ┆ ---     ┆ ---     │
  │ i64 ┆ f32     ┆ f32     ┆ f32     ┆   ┆ f32     ┆ f32     ┆ f32     ┆ f32     │
  ╞═════╪═════════╪═════════╪═════════╪═══╪═════════╪═════════╪═════════╪═════════╡
  │ 1   ┆ -3.6313 ┆ 0.2678  ┆ 3.188   ┆ … ┆ 4.4149  ┆ 5.059   ┆ 2.5606  ┆ -0.9709 │
  │ 2   ┆ 0.2678  ┆ -4.6009 ┆ 0.8789  ┆ … ┆ 4.8406  ┆ 3.0136  ┆ 2.2591  ┆ -0.6854 │
  │ 3   ┆ 3.188   ┆ 0.8789  ┆ -6.2062 ┆ … ┆ 1.3284  ┆ -0.7716 ┆ -0.5269 ┆ 1.7628  │
  │ 4   ┆ 4.3663  ┆ 2.1952  ┆ -3.275  ┆ … ┆ 0.9899  ┆ -1.2474 ┆ -0.5371 ┆ 3.1099  │
  │ 5   ┆ 2.7098  ┆ 0.5813  ┆ 0.3845  ┆ … ┆ 1.3279  ┆ 2.6576  ┆ 2.0934  ┆ 1.628   │
  │ 6   ┆ 4.0418  ┆ 4.8124  ┆ 2.6482  ┆ … ┆ 0.3223  ┆ 1.9915  ┆ 0.8034  ┆ 2.7737  │
  │ 7   ┆ 4.4149  ┆ 4.8406  ┆ 1.3284  ┆ … ┆ -1.1553 ┆ 1.4548  ┆ 0.6331  ┆ 4.296   │
  │ 8   ┆ 5.059   ┆ 3.0136  ┆ -0.7716 ┆ … ┆ 1.4548  ┆ -1.703  ┆ 0.2692  ┆ 5.1317  │
  │ 9   ┆ 2.5606  ┆ 2.2591  ┆ -0.5269 ┆ … ┆ 0.6331  ┆ 0.2692  ┆ -1.6139 ┆ 2.3225  │
  │ 10  ┆ -0.9709 ┆ -0.6854 ┆ 1.7628  ┆ … ┆ 4.296   ┆ 5.1317  ┆ 2.3225  ┆ -4.1341 │
  └─────┴─────────┴─────────┴─────────┴───┴─────────┴─────────┴─────────┴─────────┘
# ---
# name: TestComputeMatrix.test_matrix_values_snapshot[datetime-interval-hamming]
  shape: (10, 11)
  ┌─────┬─────────┬─────────┬─────────┬───┬─────────┬─────────┬─────────┬─────────┐
  │ id  ┆ 1       ┆ 2       ┆ 3       ┆ … ┆ 7       ┆ 8       ┆ 9       ┆ 10      │
  │ --- ┆ ---     ┆ ---     ┆ ---     ┆   ┆ ---     ┆ ---     ┆ ---     ┆ ---     │
  │ i64 ┆ f32     ┆ f32     ┆ f32     ┆   ┆ f32     ┆ f32     ┆ f32     ┆ f32     │
  ╞═════╪═════════╪═════════╪═════════╪═══╪═════════╪═════════╪═════════╪═════════╡
  │ 1   ┆ -5.498  ┆ -0.7217 ┆ -0.9274 ┆ … ┆ 2.3551  ┆ 1.4773  ┆ 0.2947  ┆ -0.9351 │
  │ 2   ┆ -0.7217 ┆ -4.6066 ┆ -0.0266 ┆ … ┆ 1.3082  ┆ 1.7155  ┆ -1.2971 ┆ -3.3243 │
  │ 3   ┆ -0.9274 ┆ -0.0266 ┆ -4.032  ┆ … ┆ -0.6656 ┆ -0.8559 ┆ 1.1549  ┆ 0.2747  │
  │ 4   ┆ -0.7334 ┆ -0.2498 ┆ -0.2482 ┆ … ┆ 1.1083  ┆ -0.6417 ┆ -0.5288 ┆ 2.5509  │
  │ 5   ┆ 1.2617  ┆ -1.6015 ┆ -0.0619 ┆ … ┆ 0.0732  ┆ 1.0161  ┆ -0.1502 ┆ -0.4863 │
  │ 6   ┆ 1.8974  ┆ 1.6308  ┆ 0.1232  ┆ … ┆ 0.5526  ┆ -0.7886 ┆ 0.8659  ┆ 1.5175  │
  │ 7   ┆ 2.3551  ┆ 1.3082  ┆ -0.6656 ┆ … ┆ -1.2681 ┆ 0.5526  ┆ 1.1083  ┆ 1.154   │
  │ 8   ┆ 1.4773  ┆ 1.7155  ┆ -0.8559 ┆ … ┆ 0.5526  ┆ -1.8268 ┆ 1.4964  ┆ 2.5863  │
  │ 9   ┆ 0.2947  ┆ -1.2971 ┆ 1.1549  ┆ … ┆ 1.1083  ┆ 1.4964  ┆ -1.9769 ┆ -0.1057 │
  │ 10  ┆ -0.9351 ┆ -3.3243 ┆ 0.2747  ┆ … ┆ 1.154   ┆ 2.5863  ┆ -0.1057 ┆ -6.9676 │
  └─────┴─────────┴─────────┴─────────┴───┴─────────┴─────────┴─────────┴─────────┘
# ---
# name: TestComputeMatrix.test_matrix_values_snapshot[datetime-interval-l2entity]
  shape: (10, 11)
  ┌─────┬─────────┬─────────┬─────────┬───┬─────────┬─────────┬─────────┬─────────┐
  │ id  ┆ 1       ┆ 2       ┆ 3       ┆ … ┆ 7       ┆ 8       ┆ 9       ┆ 10      │
  │ --- ┆ ---     ┆ ---     ┆ ---     ┆   ┆ ---     ┆ ---     ┆ ---     ┆ ---     │
  │ i64 ┆ f32     ┆ f32     ┆ f32     ┆   ┆ f32     ┆ f32     ┆ f32     ┆ f32     │
  ╞═════╪═════════╪═════════╪═════════╪═══╪═════════╪═════════╪═════════╪═════════╡
  │ 1   ┆ -3.6313 ┆ 0.2678  ┆ 3.188   ┆ … ┆ 4.4149  ┆ 5.059   ┆ 2.5606  ┆ -0.9709 │
  │ 2   ┆ 0.2678  ┆ -4.6009 ┆ 0.8789  ┆ … ┆ 4.8406  ┆ 3.0136  ┆ 2.2591  ┆ -0.6854 │
  │ 3   ┆ 3.188   ┆ 0.8789  ┆ -6.2062 ┆ … ┆ 1.3284  ┆ -0.7716 ┆ -0.5269 ┆ 1.7628  │
  │ 4   ┆ 4.3663  ┆ 2.1952  ┆ -3.275  ┆ … ┆ 0.9899  ┆ -1.2474 ┆ -0.5371 ┆ 3.1099  │
  │ 5   ┆ 2.7098  ┆ 0.5813  ┆ 0.3845  ┆ … ┆ 1.3279  ┆ 2.6576  ┆ 2.0934  ┆ 1.628   │
  │ 6   ┆ 4.0418  ┆ 4.8124  ┆ 2.6482  ┆ … ┆ 0.3223  ┆ 1.9915  ┆ 0.8034  ┆ 2.7737  │
  │ 7   ┆ 4.4149  ┆ 4.8406  ┆ 1.3284  ┆ … ┆ -1.1553 ┆ 1.4548  ┆ 0.6331  ┆ 4.296   │
  │ 8   ┆ 5.059   ┆ 3.0136  ┆ -0.7716 ┆ … ┆ 1.4548  ┆ -1.703  ┆ 0.2692  ┆ 5.1317  │
  │ 9   ┆ 2.5606  ┆ 2.2591  ┆ -0.5269 ┆ … ┆ 0.6331  ┆ 0.2692  ┆ -1.6139 ┆ 2.3225  │
  │ 10  ┆ -0.9709 ┆ -0.6854 ┆ 1.7628  ┆ … ┆ 4.296   ┆ 5.1317  ┆ 2.3225  ┆ -4.1341 │
  └─────┴─────────┴─────────┴─────────┴───┴─────────┴─────────┴─────────┴─────────┘
# ---
# name: TestComputeMatrix.test_matrix_values_snapshot[datetime-state-hamming]
  shape: (10, 11)
  ┌─────┬─────────┬─────────┬─────────┬───┬─────────┬─────────┬─────────┬─────────┐
  │ id  ┆ 1       ┆ 2       ┆ 3       ┆ … ┆ 7       ┆ 8       ┆ 9       ┆ 10      │
  │ --- ┆ ---     ┆ ---     ┆ ---     ┆   ┆ ---     ┆ ---     ┆ ---     ┆ ---     │
  │ i64 ┆ f32     ┆ f32     ┆ f32     ┆   ┆ f32     ┆ f32     ┆ f32     ┆ f32     │
  ╞═════╪═════════╪═════════╪═════════╪═══╪═════════╪═════════╪═════════╪═════════╡
  │ 1   ┆ -5.498  ┆ -0.7217 ┆ -0.9274 ┆ … ┆ 2.3551  ┆ 1.4773  ┆ 0.2947  ┆ -0.9351 │
  │ 2   ┆ -0.7217 ┆ -4.6066 ┆ -0.0266 ┆ … ┆ 1.3082  ┆ 1.7155  ┆ -1.2971 ┆ -3.3243 │
  │ 3   ┆ -0.9274 ┆ -0.0266 ┆ -4.032  ┆ … ┆ -0.6656 ┆ -0.8559 ┆ 1.1549  ┆ 0.2747  │
  │ 4   ┆ -0.7334 ┆ -0.2498 ┆ -0.2482 ┆ … ┆ 1.1083  ┆ -0.6417 ┆ -0.5288 ┆ 2.5509  │
  │ 5   ┆ 1.2617  ┆ -1.6015 ┆ -0.0619 ┆ … ┆ 0.0732  ┆ 1.0161  ┆ -0.1502 ┆ -0.4863 │
  │ 6   ┆ 1.8974  ┆ 1.6308  ┆ 0.1232  ┆ … ┆ 0.5526  ┆ -0.7886 ┆ 0.8659  ┆ 1.5175  │
  │ 7   ┆ 2.3551  ┆ 1.3082  ┆ -0.6656 ┆ … ┆ -1.2681 ┆ 0.5526  ┆ 1.1083  ┆ 1.154   │
  │ 8   ┆ 1.4773  ┆ 1.7155  ┆ -0.8559 ┆ … ┆ 0.5526  ┆ -1.8268 ┆ 1.4964  ┆ 2.5863  │
  │ 9   ┆ 0.2947  ┆ -1.2971 ┆ 1.1549  ┆ … ┆ 1.1083  ┆ 1.4964  ┆ -1.9769 ┆ -0.1057 │
  │ 10  ┆ -0.9351 ┆ -3.3243 ┆ 0.2747  ┆ … ┆ 1.154   ┆ 2.5863  ┆ -0.1057 ┆ -6.9676 │
  └─────┴─────────┴─────────┴─────────┴───┴─────────┴─────────┴─────────┴─────────┘
# ---
# name: TestComputeMatrix.test_matrix_values_snapshot[datetime-state-l2entity]
  shape: (10, 11)
  ┌─────┬─────────┬─────────┬─────────┬───┬─────────┬─────────┬─────────┬─────────┐
  │ id  ┆ 1       ┆ 2       ┆ 3       ┆ … ┆ 7       ┆ 8       ┆ 9       ┆ 10      │
  │ --- ┆ ---     ┆ ---     ┆ ---     ┆   ┆ ---     ┆ ---     ┆ ---     ┆ ---     │
  │ i64 ┆ f32     ┆ f32     ┆ f32     ┆   ┆ f32     ┆ f32     ┆ f32     ┆ f32     │
  ╞═════╪═════════╪═════════╪═════════╪═══╪═════════╪═════════╪═════════╪═════════╡
  │ 1   ┆ -3.6313 ┆ 0.2678  ┆ 3.188   ┆ … ┆ 4.4149  ┆ 5.059   ┆ 2.5606  ┆ -0.9709 │
  │ 2   ┆ 0.2678  ┆ -4.6009 ┆ 0.8789  ┆ … ┆ 4.8406  ┆ 3.0136  ┆ 2.2591  ┆ -0.6854 │
  │ 3   ┆ 3.188   ┆ 0.8789  ┆ -6.2062 ┆ … ┆ 1.3284  ┆ -0.7716 ┆ -0.5269 ┆ 1.7628  │
  │ 4   ┆ 4.3663  ┆ 2.1952  ┆ -3.275  ┆ … ┆ 0.9899  ┆ -1.2474 ┆ -0.5371 ┆ 3.1099  │
  │ 5   ┆ 2.7098  ┆ 0.5813  ┆ 0.3845  ┆ … ┆ 1.3279  ┆ 2.6576  ┆ 2.0934  ┆ 1.628   │
  │ 6   ┆ 4.0418  ┆ 4.8124  ┆ 2.6482  ┆ … ┆ 0.3223  ┆ 1.9915  ┆ 0.8034  ┆ 2.7737  │
  │ 7   ┆ 4.4149  ┆ 4.8406  ┆ 1.3284  ┆ … ┆ -1.1553 ┆ 1.4548  ┆ 0.6331  ┆ 4.296   │
  │ 8   ┆ 5.059   ┆ 3.0136  ┆ -0.7716 ┆ … ┆ 1.4548  ┆ -1.703  ┆ 0.2692  ┆ 5.1317  │
  │ 9   ┆ 2.5606  ┆ 2.2591  ┆ -0.5269 ┆ … ┆ 0.6331  ┆ 0.2692  ┆ -1.6139 ┆ 2.3225  │
  │ 10  ┆ -0.9709 ┆ -0.6854 ┆ 1.7628  ┆ … ┆ 4.296   ┆ 5.1317  ┆ 2.3225  ┆ -4.1341 │
  └─────┴─────────┴─────────┴─────────┴───┴─────────┴─────────┴─────────┴─────────┘
# ---
# name: TestComputeMatrix.test_matrix_values_snapshot[timestep-event-hamming]
  shape: (10, 11)
  ┌─────┬─────────┬─────────┬─────────┬───┬─────────┬─────────┬─────────┬─────────┐
  │ id  ┆ 1       ┆ 2       ┆ 3       ┆ … ┆ 7       ┆ 8       ┆ 9       ┆ 10      │
  │ --- ┆ ---     ┆ ---     ┆ ---     ┆   ┆ ---     ┆ ---     ┆ ---     ┆ ---     │
  │ i64 ┆ f32     ┆ f32     ┆ f32     ┆   ┆ f32     ┆ f32     ┆ f32     ┆ f32     │
  ╞═════╪═════════╪═════════╪═════════╪═══╪═════════╪═════════╪═════════╪═════════╡
  │ 1   ┆ -6.2132 ┆ 0.0592  ┆ -0.2545 ┆ … ┆ 3.0224  ┆ 3.2709  ┆ -0.8588 ┆ -2.7346 │
  │ 2   ┆ 0.0592  ┆ -4.0605 ┆ -0.7396 ┆ … ┆ -0.7048 ┆ 0.5908  ┆ -1.0683 ┆ -1.0492 │
  │ 3   ┆ -0.2545 ┆ -0.7396 ┆ -4.0817 ┆ … ┆ 1.6304  ┆ 1.6093  ┆ 1.248   ┆ -1.2068 │
  │ 4   ┆ 0.9389  ┆ -0.3894 ┆ -1.1677 ┆ … ┆ 1.8289  ┆ 1.8027  ┆ -0.0688 ┆ 1.1595  │
  │ 5   ┆ -0.032  ┆ 0.7233  ┆ -0.0413 ┆ … ┆ 1.8289  ┆ 0.248   ┆ 0.462   ┆ -0.7901 │
  │ 6   ┆ 1.0624  ┆ 2.2793  ┆ 0.2345  ┆ … ┆ 1.6089  ┆ 0.5526  ┆ 0.4116  ┆ 1.0515  │
  │ 7   ┆ 3.0224  ┆ -0.7048 ┆ 1.6304  ┆ … ┆ -2.5649 ┆ -1.2625 ┆ -0.7779 ┆ 2.3038  │
  │ 8   ┆ 3.2709  ┆ 0.5908  ┆ 1.6093  ┆ … ┆ -1.2625 ┆ -1.8268 ┆ 0.2622  ┆ 1.5454  │
  │ 9   ┆ -0.8588 ┆ -1.0683 ┆ 1.248   ┆ … ┆ -0.7779 ┆ 0.2622  ┆ -2.5735 ┆ 0.6614  │
  │ 10  ┆ -2.7346 ┆ -1.0492 ┆ -1.2068 ┆ … ┆ 2.3038  ┆ 1.5454  ┆ 0.6614  ┆ -5.3914 │
  └─────┴─────────┴─────────┴─────────┴───┴─────────┴─────────┴─────────┴─────────┘
# ---
# name: TestComputeMatrix.test_matrix_values_snapshot[timestep-event-l2entity]
  shape: (10, 11)
  ┌─────┬─────────┬─────────┬─────────┬───┬─────────┬─────────┬─────────┬─────────┐
  │ id  ┆ 1       ┆ 2       ┆ 3       ┆ … ┆ 7       ┆ 8       ┆ 9       ┆ 10      │
  │ --- ┆ ---     ┆ ---     ┆ ---     ┆   ┆ ---     ┆ ---     ┆ ---     ┆ ---     │
  │ i64 ┆ f32     ┆ f32     ┆ f32     ┆   ┆ f32     ┆ f32     ┆ f32     ┆ f32     │
  ╞═════╪═════════╪═════════╪═════════╪═══╪═════════╪═════════╪═════════╪═════════╡
  │ 1   ┆ -4.5188 ┆ 0.0246  ┆ 0.3935  ┆ … ┆ 2.9923  ┆ 2.0511  ┆ 2.0458  ┆ -0.839  │
  │ 2   ┆ 0.0246  ┆ -3.9585 ┆ 3.9498  ┆ … ┆ 4.7793  ┆ 1.3808  ┆ 0.1303  ┆ -4.0325 │
  │ 3   ┆ 0.3935  ┆ 3.9498  ┆ -4.8913 ┆ … ┆ -1.733  ┆ 3.8174  ┆ 1.9189  ┆ 4.8171  │
  │ 4   ┆ 2.2951  ┆ 2.9461  ┆ -2.4187 ┆ … ┆ -0.8478 ┆ 2.5563  ┆ 1.9716  ┆ 2.6137  │
  │ 5   ┆ 2.3228  ┆ 0.0761  ┆ 4.0764  ┆ … ┆ 3.2155  ┆ 1.4292  ┆ 0.6004  ┆ -0.1454 │
  │ 6   ┆ 4.9957  ┆ -0.8531 ┆ 5.0312  ┆ … ┆ 3.0438  ┆ 1.0344  ┆ 0.5693  ┆ -1.4346 │
  │ 7   ┆ 2.9923  ┆ 4.7793  ┆ -1.733  ┆ … ┆ -1.4708 ┆ 2.3959  ┆ 1.7339  ┆ 5.0249  │
  │ 8   ┆ 2.0511  ┆ 1.3808  ┆ 3.8174  ┆ … ┆ 2.3959  ┆ -1.1486 ┆ 1.5643  ┆ 1.0243  │
  │ 9   ┆ 2.0458  ┆ 0.1303  ┆ 1.9189  ┆ … ┆ 1.7339  ┆ 1.5643  ┆ -1.5753 ┆ -0.1001 │
  │ 10  ┆ -0.839  ┆ -4.0325 ┆ 4.8171  ┆ … ┆ 5.0249  ┆ 1.0243  ┆ -0.1001 ┆ -5.8168 │
  └─────┴─────────┴─────────┴─────────┴───┴─────────┴─────────┴─────────┴─────────┘
# ---
# name: TestComputeMatrix.test_matrix_values_snapshot[timestep-interval-hamming]
  shape: (10, 11)
  ┌─────┬─────────┬─────────┬─────────┬───┬─────────┬─────────┬─────────┬─────────┐
  │ id  ┆ 1       ┆ 2       ┆ 3       ┆ … ┆ 7       ┆ 8       ┆ 9       ┆ 10      │
  │ --- ┆ ---     ┆ ---     ┆ ---     ┆   ┆ ---     ┆ ---     ┆ ---     ┆ ---     │
  │ i64 ┆ f32     ┆ f32     ┆ f32     ┆   ┆ f32     ┆ f32     ┆ f32     ┆ f32     │
  ╞═════╪═════════╪═════════╪═════════╪═══╪═════════╪═════════╪═════════╪═════════╡
  │ 1   ┆ -6.2132 ┆ 0.0592  ┆ -0.2545 ┆ … ┆ 3.0224  ┆ 3.2709  ┆ -0.8588 ┆ -2.7346 │
  │ 2   ┆ 0.0592  ┆ -4.0605 ┆ -0.7396 ┆ … ┆ -0.7048 ┆ 0.5908  ┆ -1.0683 ┆ -1.0492 │
  │ 3   ┆ -0.2545 ┆ -0.7396 ┆ -4.0817 ┆ … ┆ 1.6304  ┆ 1.6093  ┆ 1.248   ┆ -1.2068 │
  │ 4   ┆ 0.9389  ┆ -0.3894 ┆ -1.1677 ┆ … ┆ 1.8289  ┆ 1.8027  ┆ -0.0688 ┆ 1.1595  │
  │ 5   ┆ -0.032  ┆ 0.7233  ┆ -0.0413 ┆ … ┆ 1.8289  ┆ 0.248   ┆ 0.462   ┆ -0.7901 │
  │ 6   ┆ 1.0624  ┆ 2.2793  ┆ 0.2345  ┆ … ┆ 1.6089  ┆ 0.5526  ┆ 0.4116  ┆ 1.0515  │
  │ 7   ┆ 3.0224  ┆ -0.7048 ┆ 1.6304  ┆ … ┆ -2.5649 ┆ -1.2625 ┆ -0.7779 ┆ 2.3038  │
  │ 8   ┆ 3.2709  ┆ 0.5908  ┆ 1.6093  ┆ … ┆ -1.2625 ┆ -1.8268 ┆ 0.2622  ┆ 1.5454  │
  │ 9   ┆ -0.8588 ┆ -1.0683 ┆ 1.248   ┆ … ┆ -0.7779 ┆ 0.2622  ┆ -2.5735 ┆ 0.6614  │
  │ 10  ┆ -2.7346 ┆ -1.0492 ┆ -1.2068 ┆ … ┆ 2.3038  ┆ 1.5454  ┆ 0.6614  ┆ -5.3914 │
  └─────┴─────────┴─────────┴─────────┴───┴─────────┴─────────┴─────────┴─────────┘
# ---
# name: TestComputeMatrix.test_matrix_values_snapshot[timestep-interval-l2entity]
  shape: (10, 11)
  ┌─────┬─────────┬─────────┬─────────┬───┬─────────┬─────────┬─────────┬─────────┐
  │ id  ┆ 1       ┆ 2       ┆ 3       ┆ … ┆ 7       ┆ 8       ┆ 9       ┆ 10      │
  │ --- ┆ ---     ┆ ---     ┆ ---     ┆   ┆ ---     ┆ ---     ┆ ---     ┆ ---     │
  │ i64 ┆ f32     ┆ f32     ┆ f32     ┆   ┆ f32     ┆ f32     ┆ f32     ┆ f32     │
  ╞═════╪═════════╪═════════╪═════════╪═══╪═════════╪═════════╪═════════╪═════════╡
  │ 1   ┆ -4.5188 ┆ 0.0246  ┆ 0.3935  ┆ … ┆ 2.9923  ┆ 2.0511  ┆ 2.0458  ┆ -0.839  │
  │ 2   ┆ 0.0246  ┆ -3.9585 ┆ 3.9498  ┆ … ┆ 4.7793  ┆ 1.3808  ┆ 0.1303  ┆ -4.0325 │
  │ 3   ┆ 0.3935  ┆ 3.9498  ┆ -4.8913 ┆ … ┆ -1.733  ┆ 3.8174  ┆ 1.9189  ┆ 4.8171  │
  │ 4   ┆ 2.2951  ┆ 2.9461  ┆ -2.4187 ┆ … ┆ -0.8478 ┆ 2.5563  ┆ 1.9716  ┆ 2.6137  │
  │ 5   ┆ 2.3228  ┆ 0.0761  ┆ 4.0764  ┆ … ┆ 3.2155  ┆ 1.4292  ┆ 0.6004  ┆ -0.1454 │
  │ 6   ┆ 4.9957  ┆ -0.8531 ┆ 5.0312  ┆ … ┆ 3.0438  ┆ 1.0344  ┆ 0.5693  ┆ -1.4346 │
  │ 7   ┆ 2.9923  ┆ 4.7793  ┆ -1.733  ┆ … ┆ -1.4708 ┆ 2.3959  ┆ 1.7339  ┆ 5.0249  │
  │ 8   ┆ 2.0511  ┆ 1.3808  ┆ 3.8174  ┆ … ┆ 2.3959  ┆ -1.1486 ┆ 1.5643  ┆ 1.0243  │
  │ 9   ┆ 2.0458  ┆ 0.1303  ┆ 1.9189  ┆ … ┆ 1.7339  ┆ 1.5643  ┆ -1.5753 ┆ -0.1001 │
  │ 10  ┆ -0.839  ┆ -4.0325 ┆ 4.8171  ┆ … ┆ 5.0249  ┆ 1.0243  ┆ -0.1001 ┆ -5.8168 │
  └─────┴─────────┴─────────┴─────────┴───┴─────────┴─────────┴─────────┴─────────┘
# ---
# name: TestComputeMatrix.test_matrix_values_snapshot[timestep-state-hamming]
  shape: (10, 11)
  ┌─────┬─────────┬─────────┬─────────┬───┬─────────┬─────────┬─────────┬─────────┐
  │ id  ┆ 1       ┆ 2       ┆ 3       ┆ … ┆ 7       ┆ 8       ┆ 9       ┆ 10      │
  │ --- ┆ ---     ┆ ---     ┆ ---     ┆   ┆ ---     ┆ ---     ┆ ---     ┆ ---     │
  │ i64 ┆ f32     ┆ f32     ┆ f32     ┆   ┆ f32     ┆ f32     ┆ f32     ┆ f32     │
  ╞═════╪═════════╪═════════╪═════════╪═══╪═════════╪═════════╪═════════╪═════════╡
  │ 1   ┆ -6.2132 ┆ 0.0592  ┆ -0.2545 ┆ … ┆ 3.0224  ┆ 3.2709  ┆ -0.8588 ┆ -2.7346 │
  │ 2   ┆ 0.0592  ┆ -4.0605 ┆ -0.7396 ┆ … ┆ -0.7048 ┆ 0.5908  ┆ -1.0683 ┆ -1.0492 │
  │ 3   ┆ -0.2545 ┆ -0.7396 ┆ -4.0817 ┆ … ┆ 1.6304  ┆ 1.6093  ┆ 1.248   ┆ -1.2068 │
  │ 4   ┆ 0.9389  ┆ -0.3894 ┆ -1.1677 ┆ … ┆ 1.8289  ┆ 1.8027  ┆ -0.0688 ┆ 1.1595  │
  │ 5   ┆ -0.032  ┆ 0.7233  ┆ -0.0413 ┆ … ┆ 1.8289  ┆ 0.248   ┆ 0.462   ┆ -0.7901 │
  │ 6   ┆ 1.0624  ┆ 2.2793  ┆ 0.2345  ┆ … ┆ 1.6089  ┆ 0.5526  ┆ 0.4116  ┆ 1.0515  │
  │ 7   ┆ 3.0224  ┆ -0.7048 ┆ 1.6304  ┆ … ┆ -2.5649 ┆ -1.2625 ┆ -0.7779 ┆ 2.3038  │
  │ 8   ┆ 3.2709  ┆ 0.5908  ┆ 1.6093  ┆ … ┆ -1.2625 ┆ -1.8268 ┆ 0.2622  ┆ 1.5454  │
  │ 9   ┆ -0.8588 ┆ -1.0683 ┆ 1.248   ┆ … ┆ -0.7779 ┆ 0.2622  ┆ -2.5735 ┆ 0.6614  │
  │ 10  ┆ -2.7346 ┆ -1.0492 ┆ -1.2068 ┆ … ┆ 2.3038  ┆ 1.5454  ┆ 0.6614  ┆ -5.3914 │
  └─────┴─────────┴─────────┴─────────┴───┴─────────┴─────────┴─────────┴─────────┘
# ---
# name: TestComputeMatrix.test_matrix_values_snapshot[timestep-state-l2entity]
  shape: (10, 11)
  ┌─────┬─────────┬─────────┬─────────┬───┬─────────┬─────────┬─────────┬─────────┐
  │ id  ┆ 1       ┆ 2       ┆ 3       ┆ … ┆ 7       ┆ 8       ┆ 9       ┆ 10      │
  │ --- ┆ ---     ┆ ---     ┆ ---     ┆   ┆ ---     ┆ ---     ┆ ---     ┆ ---     │
  │ i64 ┆ f32     ┆ f32     ┆ f32     ┆   ┆ f32     ┆ f32     ┆ f32     ┆ f32     │
  ╞═════╪═════════╪═════════╪═════════╪═══╪═════════╪═════════╪═════════╪═════════╡
  │ 1   ┆ -4.5188 ┆ 0.0246  ┆ 0.3935  ┆ … ┆ 2.9923  ┆ 2.0511  ┆ 2.0458  ┆ -0.839  │
  │ 2   ┆ 0.0246  ┆ -3.9585 ┆ 3.9498  ┆ … ┆ 4.7793  ┆ 1.3808  ┆ 0.1303  ┆ -4.0325 │
  │ 3   ┆ 0.3935  ┆ 3.9498  ┆ -4.8913 ┆ … ┆ -1.733  ┆ 3.8174  ┆ 1.9189  ┆ 4.8171  │
  │ 4   ┆ 2.2951  ┆ 2.9461  ┆ -2.4187 ┆ … ┆ -0.8478 ┆ 2.5563  ┆ 1.9716  ┆ 2.6137  │
  │ 5   ┆ 2.3228  ┆ 0.0761  ┆ 4.0764  ┆ … ┆ 3.2155  ┆ 1.4292  ┆ 0.6004  ┆ -0.1454 │
  │ 6   ┆ 4.9957  ┆ -0.8531 ┆ 5.0312  ┆ … ┆ 3.0438  ┆ 1.0344  ┆ 0.5693  ┆ -1.4346 │
  │ 7   ┆ 2.9923  ┆ 4.7793  ┆ -1.733  ┆ … ┆ -1.4708 ┆ 2.3959  ┆ 1.7339  ┆ 5.0249  │
  │ 8   ┆ 2.0511  ┆ 1.3808  ┆ 3.8174  ┆ … ┆ 2.3959  ┆ -1.1486 ┆ 1.5643  ┆ 1.0243  │
  │ 9   ┆ 2.0458  ┆ 0.1303  ┆ 1.9189  ┆ … ┆ 1.7339  ┆ 1.5643  ┆ -1.5753 ┆ -0.1001 │
  │ 10  ┆ -0.839  ┆ -4.0325 ┆ 4.8171  ┆ … ┆ 5.0249  ┆ 1.0243  ┆ -0.1001 ┆ -5.8168 │
  └─────┴─────────┴─────────┴─────────┴───┴─────────┴─────────┴─────────┴─────────┘
# ---
# name: TestComputeMatrix.test_mixed_matrix_snapshot[event-hamming]
  shape: (5, 6)
  ┌─────────┬─────────┬─────────┬─────────┬─────────┬─────────┐
  │ id      ┆ empty_1 ┆ empty_2 ┆ empty_3 ┆ seq_1   ┆ seq_2   │
  │ ---     ┆ ---     ┆ ---     ┆ ---     ┆ ---     ┆ ---     │
  │ str     ┆ f32     ┆ f32     ┆ f32     ┆ f32     ┆ f32     │
  ╞═════════╪═════════╪═════════╪═════════╪═════════╪═════════╡
  │ empty_1 ┆ NaN     ┆ NaN     ┆ NaN     ┆ NaN     ┆ NaN     │
  │ empty_2 ┆ NaN     ┆ NaN     ┆ NaN     ┆ NaN     ┆ NaN     │
  │ empty_3 ┆ NaN     ┆ NaN     ┆ NaN     ┆ NaN     ┆ NaN     │
  │ seq_1   ┆ NaN     ┆ NaN     ┆ NaN     ┆ -0.5514 ┆ -0.1326 │
  │ seq_2   ┆ NaN     ┆ NaN     ┆ NaN     ┆ -0.1326 ┆ -1.2188 │
  └─────────┴─────────┴─────────┴─────────┴─────────┴─────────┘
# ---
# name: TestComputeMatrix.test_mixed_matrix_snapshot[event-l2entity]
  shape: (5, 6)
  ┌─────────┬─────────┬─────────┬─────────┬─────────┬─────────┐
  │ id      ┆ empty_1 ┆ empty_2 ┆ empty_3 ┆ seq_1   ┆ seq_2   │
  │ ---     ┆ ---     ┆ ---     ┆ ---     ┆ ---     ┆ ---     │
  │ str     ┆ f32     ┆ f32     ┆ f32     ┆ f32     ┆ f32     │
  ╞═════════╪═════════╪═════════╪═════════╪═════════╪═════════╡
  │ empty_1 ┆ NaN     ┆ NaN     ┆ NaN     ┆ NaN     ┆ NaN     │
  │ empty_2 ┆ NaN     ┆ NaN     ┆ NaN     ┆ NaN     ┆ NaN     │
  │ empty_3 ┆ NaN     ┆ NaN     ┆ NaN     ┆ NaN     ┆ NaN     │
  │ seq_1   ┆ NaN     ┆ NaN     ┆ NaN     ┆ -0.8504 ┆ 2.8261  │
  │ seq_2   ┆ NaN     ┆ NaN     ┆ NaN     ┆ 2.8261  ┆ -1.3582 │
  └─────────┴─────────┴─────────┴─────────┴─────────┴─────────┘
# ---
# name: TestComputeMatrix.test_mixed_matrix_snapshot[interval-hamming]
  shape: (5, 6)
  ┌─────────┬─────────┬─────────┬─────────┬─────────┬─────────┐
  │ id      ┆ empty_1 ┆ empty_2 ┆ empty_3 ┆ seq_1   ┆ seq_2   │
  │ ---     ┆ ---     ┆ ---     ┆ ---     ┆ ---     ┆ ---     │
  │ str     ┆ f32     ┆ f32     ┆ f32     ┆ f32     ┆ f32     │
  ╞═════════╪═════════╪═════════╪═════════╪═════════╪═════════╡
  │ empty_1 ┆ NaN     ┆ NaN     ┆ NaN     ┆ NaN     ┆ NaN     │
  │ empty_2 ┆ NaN     ┆ NaN     ┆ NaN     ┆ NaN     ┆ NaN     │
  │ empty_3 ┆ NaN     ┆ NaN     ┆ NaN     ┆ NaN     ┆ NaN     │
  │ seq_1   ┆ NaN     ┆ NaN     ┆ NaN     ┆ -0.5514 ┆ -0.1326 │
  │ seq_2   ┆ NaN     ┆ NaN     ┆ NaN     ┆ -0.1326 ┆ -1.2188 │
  └─────────┴─────────┴─────────┴─────────┴─────────┴─────────┘
# ---
# name: TestComputeMatrix.test_mixed_matrix_snapshot[interval-l2entity]
  shape: (5, 6)
  ┌─────────┬─────────┬─────────┬─────────┬─────────┬─────────┐
  │ id      ┆ empty_1 ┆ empty_2 ┆ empty_3 ┆ seq_1   ┆ seq_2   │
  │ ---     ┆ ---     ┆ ---     ┆ ---     ┆ ---     ┆ ---     │
  │ str     ┆ f32     ┆ f32     ┆ f32     ┆ f32     ┆ f32     │
  ╞═════════╪═════════╪═════════╪═════════╪═════════╪═════════╡
  │ empty_1 ┆ NaN     ┆ NaN     ┆ NaN     ┆ NaN     ┆ NaN     │
  │ empty_2 ┆ NaN     ┆ NaN     ┆ NaN     ┆ NaN     ┆ NaN     │
  │ empty_3 ┆ NaN     ┆ NaN     ┆ NaN     ┆ NaN     ┆ NaN     │
  │ seq_1   ┆ NaN     ┆ NaN     ┆ NaN     ┆ -0.8504 ┆ 2.8261  │
  │ seq_2   ┆ NaN     ┆ NaN     ┆ NaN     ┆ 2.8261  ┆ -1.3582 │
  └─────────┴─────────┴─────────┴─────────┴─────────┴─────────┘
# ---
# name: TestComputeMatrix.test_mixed_matrix_snapshot[state-hamming]
  shape: (5, 6)
  ┌─────────┬─────────┬─────────┬─────────┬─────────┬─────────┐
  │ id      ┆ empty_1 ┆ empty_2 ┆ empty_3 ┆ seq_1   ┆ seq_2   │
  │ ---     ┆ ---     ┆ ---     ┆ ---     ┆ ---     ┆ ---     │
  │ str     ┆ f32     ┆ f32     ┆ f32     ┆ f32     ┆ f32     │
  ╞═════════╪═════════╪═════════╪═════════╪═════════╪═════════╡
  │ empty_1 ┆ NaN     ┆ NaN     ┆ NaN     ┆ NaN     ┆ NaN     │
  │ empty_2 ┆ NaN     ┆ NaN     ┆ NaN     ┆ NaN     ┆ NaN     │
  │ empty_3 ┆ NaN     ┆ NaN     ┆ NaN     ┆ NaN     ┆ NaN     │
  │ seq_1   ┆ NaN     ┆ NaN     ┆ NaN     ┆ -0.5514 ┆ -0.1326 │
  │ seq_2   ┆ NaN     ┆ NaN     ┆ NaN     ┆ -0.1326 ┆ -1.2188 │
  └─────────┴─────────┴─────────┴─────────┴─────────┴─────────┘
# ---
# name: TestComputeMatrix.test_mixed_matrix_snapshot[state-l2entity]
  shape: (5, 6)
  ┌─────────┬─────────┬─────────┬─────────┬─────────┬─────────┐
  │ id      ┆ empty_1 ┆ empty_2 ┆ empty_3 ┆ seq_1   ┆ seq_2   │
  │ ---     ┆ ---     ┆ ---     ┆ ---     ┆ ---     ┆ ---     │
  │ str     ┆ f32     ┆ f32     ┆ f32     ┆ f32     ┆ f32     │
  ╞═════════╪═════════╪═════════╪═════════╪═════════╪═════════╡
  │ empty_1 ┆ NaN     ┆ NaN     ┆ NaN     ┆ NaN     ┆ NaN     │
  │ empty_2 ┆ NaN     ┆ NaN     ┆ NaN     ┆ NaN     ┆ NaN     │
  │ empty_3 ┆ NaN     ┆ NaN     ┆ NaN     ┆ NaN     ┆ NaN     │
  │ seq_1   ┆ NaN     ┆ NaN     ┆ NaN     ┆ -0.8504 ┆ 2.8261  │
  │ seq_2   ┆ NaN     ┆ NaN     ┆ NaN     ┆ 2.8261  ┆ -1.3582 │
  └─────────┴─────────┴─────────┴─────────┴─────────┴─────────┘
# ---
# name: TestSinglePair.test_pair_sequence_snapshot[datetime-event-hamming]
  -0.7217
# ---
# name: TestSinglePair.test_pair_sequence_snapshot[datetime-event-l2entity]
  0.2678
# ---
# name: TestSinglePair.test_pair_sequence_snapshot[datetime-interval-hamming]
  -0.7217
# ---
# name: TestSinglePair.test_pair_sequence_snapshot[datetime-interval-l2entity]
  0.2678
# ---
# name: TestSinglePair.test_pair_sequence_snapshot[datetime-state-hamming]
  -0.7217
# ---
# name: TestSinglePair.test_pair_sequence_snapshot[datetime-state-l2entity]
  0.2678
# ---
# name: TestSinglePair.test_pair_sequence_snapshot[timestep-event-hamming]
  0.0592
# ---
# name: TestSinglePair.test_pair_sequence_snapshot[timestep-event-l2entity]
  0.0246
# ---
# name: TestSinglePair.test_pair_sequence_snapshot[timestep-interval-hamming]
  0.0592
# ---
# name: TestSinglePair.test_pair_sequence_snapshot[timestep-interval-l2entity]
  0.0246
# ---
# name: TestSinglePair.test_pair_sequence_snapshot[timestep-state-hamming]
  0.0592
# ---
# name: TestSinglePair.test_pair_sequence_snapshot[timestep-state-l2entity]
  0.0246
# ---
# name: TestSinglePair.test_same_sequence_snapshot[datetime-event-hamming]
  -5.498
# ---
# name: TestSinglePair.test_same_sequence_snapshot[datetime-event-l2entity]
  -3.6313
# ---
# name: TestSinglePair.test_same_sequence_snapshot[datetime-interval-hamming]
  -5.498
# ---
# name: TestSinglePair.test_same_sequence_snapshot[datetime-interval-l2entity]
  -3.6313
# ---
# name: TestSinglePair.test_same_sequence_snapshot[datetime-state-hamming]
  -5.498
# ---
# name: TestSinglePair.test_same_sequence_snapshot[datetime-state-l2entity]
  -3.6313
# ---
# name: TestSinglePair.test_same_sequence_snapshot[timestep-event-hamming]
  -6.2132
# ---
# name: TestSinglePair.test_same_sequence_snapshot[timestep-event-l2entity]
  -4.5188
# ---
# name: TestSinglePair.test_same_sequence_snapshot[timestep-interval-hamming]
  -6.2132
# ---
# name: TestSinglePair.test_same_sequence_snapshot[timestep-interval-l2entity]
  -4.5188
# ---
# name: TestSinglePair.test_same_sequence_snapshot[timestep-state-hamming]
  -6.2132
# ---
# name: TestSinglePair.test_same_sequence_snapshot[timestep-state-l2entity]
  -4.5188
# ---
